--- a/translations/kangyur/translations/055-002_toh128-appearing_differently_to_all_while_not_departing_emptiness.xml
+++ b/translations/kangyur/translations/055-002_toh128-appearing_differently_to_all_while_not_departing_emptiness.xml
@@ -45,7 +45,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-055-002-298">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -226,6 +226,9 @@
                 <change who="#andre" when="2024-06-13T14:27:47.645Z" type="text-version" status="1.0.3" xml:id="UT22084-055-002-304">
                     <desc>Minor fix to a note link.</desc>
                 </change>
+                <change who="#konchog" when="2024-06-18T15:48:31.433Z" type="text-version" status="1.0.4" xml:id="UT22084-055-002-305">
+                    <desc>After review by Dawn, several fixes in bibl., notes, and glossary.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -367,7 +370,7 @@
                                 ba</title> (exactly the title of the sūtra given in the colophons of
                             the Kangyur version) is listed among those whose attribution is unknown
                             (Tib. <title xml:lang="Bo-Ltn">sus byas mi shes par snang ngo</title>).
-                            Chomden Raltri, fol. 67.a. Also transcribed in Schaeffer and van der
+                            Chomden Raltri, folio 67.a. Also transcribed in Schaeffer and van der
                             Kuijp 2009, pp. 255–56.</note> Therefore, it seems that Chomden Raltri
                         had a version of the text in his possession, but that the translation lacked
                         a colophon to identify its translators. However, a few decades later, when
@@ -376,7 +379,7 @@
                         the same passage Butön notes that this sūtra “was certainly translated
                         previously, but these days it is not included in the Kangyur and cannot be
                             located.”<note place="end" xml:id="UT22084-055-002-255"> Butön, chos
-                            ’byung, fol. 154.a. Butön gives the title as <title xml:lang="Bo-Ltn">chos nyid rang gi ngo bo nyid las mi g.yo bar tha dad par thams cad
+                            ’byung, folio 154.a. Butön gives the title as <title xml:lang="Bo-Ltn">chos nyid rang gi ngo bo nyid las mi g.yo bar tha dad par thams cad
                                 la snang ba bstan pa</title> and, following the Denkarma, cites the
                             length of the missing text as 90 <foreign xml:lang="Sa-Ltn" type="term">ślokas</foreign>.</note> Since he assumed that it had gone missing,
                         it follows that Butön did not have access to the text that Chomden Raltri
@@ -681,7 +684,7 @@
                                 <title xml:lang="en">Jewel Ornament of Liberation</title> (commonly
                             known in Tibetan as the <title xml:lang="Bo-Ltn">dwags po thar
                                 rgyan</title>), Gampopa Sönam Rinchen (sgam po pa bsod nams rin
-                            chen, 1079–1153) quotes the text verbatim. Gampopa 2005, pp. 304–5. Ken
+                            chen, 1079–1153) quotes the text verbatim. Gampopa 2005, pp. 304–05. Ken
                             Holmes translates the passage as “every phenomenon is, by its very
                             nature, unborn, essentially nonabiding, free from the extremes of acting
                             and action, and beyond the scope of thought and nonthought.” Holmes,
@@ -1215,7 +1218,7 @@
                             Bu-Ston</title>, vol. 24 (ya), pp. 633–1055. New Delhi: International
                         Academy of Indian Culture, 1965–71. <ref target="https://www.google.com/url?q=https://library.bdrc.io/show/bdr:MW22106_ECEBF8&amp;sa=D&amp;source=editors&amp;ust=1702404209604434&amp;usg=AOvVaw2fcAP9OGWMX7HPFeCJsH6L">BDRC W22106</ref>.</bibl>
                     <bibl xml:id="UT22084-055-002-183">Chomden Raltri (bcom ldan ral gri) <title xml:lang="Bo-Ltn">Bstan pa rgyas pa rgyan gyi nyi ’od</title>. In <title xml:lang="Bo-Ltn">gsung thor bu</title> by bcom ldan rig pa’i ral gri,
-                        volume 2, fol. 1-78. <ref target="http://purl.bdrc.io/resource/MW1CZ1041">BDRC MW1CZ1041</ref>.</bibl>
+                        volume 2, folios 1–78. <ref target="http://purl.bdrc.io/resource/MW1CZ1041">BDRC MW1CZ1041</ref>.</bibl>
                     <bibl xml:id="UT22084-055-002-184">Denkarma (<title xml:lang="Bo-Ltn">pho brang
                             stod thang ldan dkar gyi chos kyi ’gyur ro cog gi dkar chag</title>).
                         Toh 4364, Degé Tengyur vol. 206 (sna tshogs, jo), folios 294.b–310.a.</bibl>
@@ -1240,7 +1243,7 @@
                         gsal mgul rgyan las/ glegs bam bzhi pa rtse sbyor sogs bshad paʼi skabs.” In
                             <title xml:lang="Bo-Ltn">ʼphags yul rgyan drug mchog gnyis kyi zhal
                             lung</title>, edited by Shes rab bzang po and Thub bstan smon lam, Par
-                        gzhi dang po, 24:22–131. 1–80. Lhasa: Bod ljongs bod yig dpe rnying dpe
+                        gzhi dang po, 24: 22–131. 1–80. Lhasa: Bod ljongs bod yig dpe rnying dpe
                         skrun khang, 2015. <ref target="http://purl.bdrc.io/resource/MW3CN3408_6A20F9">http://purl.bdrc.io/resource/MW3CN3408_6A20F9</ref>
                     </bibl>
                 </div>
@@ -1251,17 +1254,17 @@
                             ngag gi bka’ srol zab mo ’chad cing nyams su len pa la nye bar mkho ba’i
                             bstan bcos legs par bshad pa dus ’khor bstan pa’i mdzes rgyan</title>.
                         In vol. 18 of <title xml:lang="Bo-Ltn">gsung ’bum </title>/ <title xml:lang="Bo-Ltn">ngag dbang kun dga’ bsod nams</title>. <ref target="http://purl.bdrc.io/resource/UT29307_139_0000">http://purl.bdrc.io/resource/UT29307_139_0000</ref>.</bibl>
-                    <bibl xml:id="UT22084-055-002-189">Almogi, Orna. “Māyopamādvayavāda versus
+                    <bibl xml:id="UT22084-055-002-189">Almogi, Orna (2010). “Māyopamādvayavāda versus
                         Sarvadharmāpratiṣṭhānavāda: A Late Indian Subclassification of Madhyamaka
                         and its Reception in Tibet.” <title xml:lang="en">Journal of the
-                            International College for Postgraduate Studies,</title> vol. 14 (2010):
+                            International College for Postgraduate Studies,</title> 14 (2010):
                         135–212.</bibl>
-                    <bibl xml:id="UT22084-055-002-283">Almogi, Orna. “How Authentic Are Titles and
+                    <bibl xml:id="UT22084-055-002-283">——— (2008). “How Authentic Are Titles and
                         Colophons of Tantric Works in the Tibetan Canon? The Case of Three Works and
-                        Their Authors and Translators”. In Orna Almogi, ed., <title xml:lang="en">Contributions to Tibetan Buddhist Literature</title>. PIATS 2006:
+                        Their Authors and Translators.” In <title xml:lang="en">Contributions to Tibetan Buddhist Literature</title>, edited by Orna Almogi, 87–124. PIATS 2006:
                         Tibetan Studies: Proceedings of the Eleventh Seminar of the International
                         Association for Tibetan Studies, Königswinter 2006. <title xml:lang="de">Beiträge zur Zentralasienforschung</title> 14, ed. Peter Schwieger.
-                        Band 14. Halle: IITBS, 2008, pp. 87-124.</bibl>
+                        Band 14. Halle: IITBS, 2008.</bibl>
                     <bibl xml:id="UT22084-055-002-190">Herrmann-Pfandt, Adelheid. <title xml:lang="de">Die lHan kar ma: ein früher Katalog der ins Tibetische
                             übersetzten buddhistischen Texte</title>. Vienna: Verlag der
                         österreichischen Akademie der Wissenschaften, 2008.</bibl>
@@ -1283,7 +1286,7 @@
                     <bibl xml:id="UT22084-055-002-284">Skilling, Peter. “Kanjur Titles and
                         Colophons.” In <title xml:lang="en">Tibetan Studies: Proceedings of the 6th
                             Seminar of the International Association for Tibetan Studies, Fagernes
-                            1992</title>, edited by Per Kvaerne, 2: 768–780. Oslo: Institute for
+                            1992</title>, edited by Per Kvaerne, 2: 768–80. Oslo: Institute for
                         Comparative Research in Human Culture, 1994.</bibl>
                     <bibl xml:id="UT22084-055-002-237">Tsukinowa Kenryū (<foreign xml:lang="ja">月輪賢隆</foreign>). <title xml:lang="Ja-Ltn">Butten no Hihanteki Kenkyū
                             </title>(<title xml:lang="ja">仏典の批判的硏究</title>). Kyoto: Hyakkaen,
@@ -1500,7 +1503,7 @@
                                         (<foreign xml:lang="Sa-Ltn">pratyekabuddhayāna</foreign>).
                                     The name stems from their goal‍—i.e. nirvāṇa and personal
                                     liberation‍—being seen as lesser than the goal of the Great
-                                    Vehicle‍—i.e. buddhahood and the liberation of all sentient
+                                    Vehicle‍, i.e. buddhahood and the liberation of all sentient
                                     beings. See also “Great Vehicle.”</p>
                             </note>
                         </gloss>
