--- a/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
+++ b/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-066-011-4">Norbu Samphel </author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-066-011"/>
                 <date/>
             </publicationStmt>
@@ -67,6 +67,12 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-23T12:07:00.099Z" type="text-version" status="0.0.7" xml:id="UT22084-066-011-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-19T07:10:09.46Z" type="translation-status" status="2.h" xml:id="UT22084-066-011-16">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-19T07:10:09.46Z" type="text-version" status="0.0.8" xml:id="UT22084-066-011-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
