--- a/translations/kangyur/placeholders/057-002_toh143,611,918-the_two_stanza_incantation.xml
+++ b/translations/kangyur/placeholders/057-002_toh143,611,918-the_two_stanza_incantation.xml
@@ -14,11 +14,11 @@
                 <editor role="proofreader" xml:id="UT22084-057-002-4">Daniela Espíndola</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-057-002"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +82,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:26:40.316Z" type="text-version" status="0.0.7" xml:id="UT22084-057-002-14">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-20T10:00:14.307Z" type="translation-status" status="2.g" xml:id="UT22084-057-002-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-20T10:00:14.307Z" type="text-version" status="0.0.8" xml:id="UT22084-057-002-16">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
