--- a/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
+++ b/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
@@ -13,11 +13,11 @@
                 <editor role="proofreader" xml:id="UT22084-072-023-4">Daniela Espíndola</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-072-023"/>
                 <date/>
             </publicationStmt>
@@ -62,6 +62,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-18T15:18:36.077Z" type="text-version" status="0.0.7" xml:id="UT22084-072-023-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-20T10:01:44.433Z" type="translation-status" status="2.g" xml:id="UT22084-072-023-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-20T10:01:44.433Z" type="text-version" status="0.0.8" xml:id="UT22084-072-023-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
