--- a/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
+++ b/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
@@ -17,11 +17,11 @@
                 <editor role="copyEditor" xml:id="UT22084-088-010-37">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.16 <date>2024</date>
+                <edition>v 0.0.17 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-088-010"/>
                 <date/>
             </publicationStmt>
@@ -118,6 +118,12 @@
                 </change>
                 <change who="#sameer" when="2024-03-28T06:41:57.771Z" type="text-version" status="0.0.16" xml:id="UT22084-088-010-39">
                     <desc>Updated vol. 88 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-20T13:18:16.545Z" type="translation-status" status="2.c" xml:id="UT22084-088-010-40">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-20T13:18:16.545Z" type="text-version" status="0.0.17" xml:id="UT22084-088-010-41">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
