--- a/translations/kangyur/placeholders/043-016_toh79-the_sutra_teaching_the_unfathomable_sphere_of_a_buddha.xml
+++ b/translations/kangyur/placeholders/043-016_toh79-the_sutra_teaching_the_unfathomable_sphere_of_a_buddha.xml
@@ -7,20 +7,21 @@
                 <title type="mainTitle" xml:lang="en">The Sūtra Teaching the Unfathomable Sphere of a Buddha</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Acintyabuddhaviṣayanirdeśasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi yul bsam gyis mi khyab pa bstan pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="zh">《說佛國不思議經》(大正藏:《大寶積經善德天子會第三十五》)</title>
+                <title type="otherTitle" xml:lang="zh">《說佛國不思議經》(大正藏:《大寶積經善德天子會第三十五》)</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryācintyabuddhaviṣaya­nirdeśa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas kyi yul bsam gyis mi khyab pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-043-016-1">UCSB Buddhist Studies Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-043-016-2">ErdeneBaatar Erdene-Ochir</author>
                 <author role="translatorEng" xml:id="UT22084-043-016-3">Jed Forman</author>
                 <editor role="projectEditor" xml:id="UT22084-043-016-17">George FitzHerbert</editor>
+                <sponsor xml:id="UT22084-043-016-21">Aron Csondes</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-043-016"/>
                 <date/>
             </publicationStmt>
@@ -74,6 +75,15 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-25T14:25:51.342Z" type="text-version" status="0.0.9" xml:id="UT22084-043-016-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-05-23T07:49:01.204Z" type="text-version" status="0.0.10" xml:id="UT22084-043-016-22">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-21T10:00:56.738Z" type="translation-status" status="2.e" xml:id="UT22084-043-016-23">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-21T10:00:56.738Z" type="text-version" status="0.0.11" xml:id="UT22084-043-016-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
