--- a/translations/kangyur/placeholders/085-005_toh485-a_portion_of_the_practice_of_the_sovereign_tantra_purifying_evil_destinies.xml
+++ b/translations/kangyur/placeholders/085-005_toh485-a_portion_of_the_practice_of_the_sovereign_tantra_purifying_evil_destinies.xml
@@ -16,11 +16,11 @@
                 <author role="translatorEng" xml:id="UT22084-085-005-2">Kris Anderson</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-085-005"/>
                 <date/>
             </publicationStmt>
@@ -72,6 +72,12 @@
                 </change>
                 <change who="#cabie-sim" when="2024-01-30T12:54:47.124Z" type="text-version" status="0.0.9" xml:id="UT22084-085-005-14">
                     <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-24T14:30:13.391Z" type="translation-status" status="2.g" xml:id="UT22084-085-005-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-24T14:30:13.391Z" type="text-version" status="0.0.10" xml:id="UT22084-085-005-16">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
