--- a/translations/kangyur/translations/091-039_toh642-one_hundred_and_eight_names_of_manjusri.xml
+++ b/translations/kangyur/translations/091-039_toh642-one_hundred_and_eight_names_of_manjusri.xml
@@ -24,7 +24,7 @@
         <editor role="finalReviewer" xml:id="UT22084-091-039-226">Ryan Damron</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -153,6 +153,9 @@
                 <change who="#sameer" when="2024-06-24T06:41:03.892Z" type="text-version" status="1.0.0" xml:id="UT22084-091-039-229">
                     <desc>First published version.</desc>
                 </change>
+                <change who="#celso" when="2024-06-25T19:13:25.275Z" type="text-version" status="1.0.1" xml:id="UT22084-091-039-231">
+                    <desc>Activated pending link</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -221,7 +224,10 @@
               notwithstanding, we note that in the preface to his 1930 article “Laudatory Verses of Mañjuśrī” Ryūjō Kambayashi writes, “The laudatory
               verses of the hundred-and-eight names of Mañjuśrī seem to have begun with the Chinese transcription of Amogha (Fukū 705–744 A.D.),” a
               reference to Amoghavajra (705–74), the famous translator of Indian Buddhist tantric works into Chinese.</note> Whereas the Tibetan
-            translators chose to translate the names into Tibetan, it seems that here, as in the case of dhāraṇī texts such as <title xml:lang="en">One Hundred and Eight Names of Youthful Mañjuśrī Accompanied by His Dhāraṇī-Mantra</title> (Toh 639),<ref rend="pending" target="http://read.84000.co/translation/toh639.html"/> the Chinese translators preferred to preserve the phonetics of Sanskrit names
+            translators chose to translate the names into Tibetan, it seems that here, as in the case of dhāraṇī texts such as <title xml:lang="en">One Hundred and Eight Names of Youthful Mañjuśrī Accompanied by His Dhāraṇī-Mantra</title> (Toh 639),<note place="end" xml:id="UT22084-091-039-230">
+                            <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh639.html">One Hundred and Eight Names of Youthful Mañjuśrī Accompanied by His Dhāraṇī-Mantra</ref>
+                            </title> (<title xml:lang="Sa-Ltn">Mañjuśrī­kumāra­bhūtāṣṭottara­śataka­nāma­dhāraṇī­mantra­sahita</title>, Toh 639).</note> the Chinese translators preferred to preserve the phonetics of Sanskrit names
             through transliteration, rather than to translate them into Chinese.</p>
           <milestone unit="chunk" xml:id="UT22084-091-039-65"/>
           <p tid="15">This English translation is based on the Degé Kangyur version of <title xml:lang="en">One Hundred and Eight Names of
@@ -612,6 +618,7 @@
           <bibl xml:id="UT22084-091-039-166">Lhasey Lotsawa Translations and Publications, trans. <title xml:lang="en">The Hundred and Eight Names of
               Tārā</title> (<title xml:lang="Sa-Ltn">Tārābhaṭṭārikānāmāṣṭaśatakam</title>, Toh 727). 84000: Translating the Words of the Buddha,
             forthcoming.</bibl>
+                    <ref rend="pending" inst="edit 'forthcoming' in source bibl above" target="http://read.84000.co/translation/toh727.html"/>
           <bibl xml:id="UT22084-091-039-167">Samye Translations, trans. <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh728.html">The Hundred and Eight Names of the Goddess Tārā</ref>
                         </title> (<title xml:lang="Sa-Ltn">Tārādevīnāmāṣṭaśataka</title>, Toh 728). 84000: Translating the Words of the Buddha, 2022.</bibl>
