--- a/translations/kangyur/translations/043-010_toh73-the_chapter_on_the_questions_of_king_udayana_of_vatsa.xml
+++ b/translations/kangyur/translations/043-010_toh73-the_chapter_on_the_questions_of_king_udayana_of_vatsa.xml
@@ -32,7 +32,7 @@
         <editor role="finalReviewer" xml:id="UT22084-043-010-409">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.5 <date>2024</date>
+                <edition>v 1.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -202,6 +202,9 @@
                 <change who="#martina-cotter" when="2024-06-14T09:38:41.492Z" type="text-version" status="1.0.5" xml:id="UT22084-043-010-10297">
                     <desc>added missing full-stop.</desc>
                 </change>
+                <change who="#celso" when="2024-06-25T19:33:39.768Z" type="text-version" status="1.0.6" xml:id="UT22084-043-010-10298">
+                    <desc>corrected typo in hyperlink</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -344,7 +347,7 @@
             Another text in the Kangyur featuring King Udayana of Vatsa that follows this pattern is 
             <title xml:lang="en">Advice to a King (2)</title>
             (Toh 215).<note place="end" xml:id="UT22084-043-010-1065">See <title xml:lang="en">
-                                <ref target="https://read.84000.co/translation/toh15.html">Advice to a King (2)</ref>
+                                <ref target="https://read.84000.co/translation/toh215.html">Advice to a King (2)</ref>
                             </title>
               (Toh 215), 84000: Translating the Words of the Buddha, 2024.</note> In its brief framing story, the king is about to set out on a military campaign of conquest
           when he meets the Buddha. At first angry about being intercepted, he shoots an arrow at the Buddha, but
@@ -1798,7 +1801,7 @@
               drug rang grol</title>. TBRC W1PD45150. Vol. 7: pp. 9–222. zi ling: mtsho sngon mi
             rigs dpe skrun khang, 2002.</bibl>
           <bibl xml:id="UT22084-043-010-10295">84000. <title xml:lang="en">
-                            <ref target="https://read.84000.co/translation/toh15.html">Advice to a King (2)</ref>
+                            <ref target="https://read.84000.co/translation/toh215.html">Advice to a King (2)</ref>
                         </title>
             (<title xml:lang="Sa-Ltn">Rājadeśa</title>, Toh 215). Translated by the Sakya Pandita Translation Group. 84000: Translating the Words of the Buddha, 2024.</bibl>
           <bibl xml:id="UT22084-043-010-295">Bendall, Cecil, ed. <title xml:lang="en">Çikshāsamuccaya: A Compendium of Buddhistic Teaching</title>. Bibliotheca Buddhica I.
