--- a/translations/kangyur/translations/091-002_toh605,956-the_dharani_of_vajrabhairava.xml
+++ b/translations/kangyur/translations/091-002_toh605,956-the_dharani_of_vajrabhairava.xml
@@ -24,7 +24,7 @@
                                 <editor role="finalReviewer" xml:id="UT22084-091-002-204">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -158,6 +158,9 @@
                 </change>
                 <change who="#sameer" when="2024-06-24T06:18:02.253Z" type="text-version" status="1.0.0" xml:id="UT22084-091-002-208">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#celso" when="2024-06-25T21:17:11.709Z" type="text-version" status="1.0.1" xml:id="UT22084-091-002-209">
+                    <desc>Minor edits</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -300,20 +303,19 @@
                                         <p tid="30">As for the rite, to paralyze all one’s enemies and counter all kākhordas, after a square maṇḍala has been prepared on cow dung and a weapon incanted
                                                 seven times in a wrathful state of mind, all kākhordas will be disrupted the moment the weapon is stabbed into the ground.</p>
                                         <milestone unit="chunk" xml:id="UT22084-091-002-134"/>
-                                        <p tid="31">When, wishing to repel an enemy army, a rod is incanted seven times and hurled in its direction, all the enemy soldiers will fall into a drunken
-                                                stupor. </p>
+                                        <p tid="31">When, wishing to repel an enemy army, one incants a rod seven times and hurls it in the army's direction, all the enemy soldiers will fall into a stupor.</p>
+                                        
                                         <milestone unit="chunk" xml:id="UT22084-091-002-135"/>
-                                        <p tid="32">If one wishes to subjugate nāgas, a vajra wrathfully incanted seven times and thrust at them will bring the nāgas under one’s control.</p>
+                                        <p tid="32">If one wishes to subjugate nāgas, one should wrathfully incant a vajra seven times and thrust it at them. This will bring the nāgas under one’s control.</p>
                                         <milestone unit="chunk" xml:id="UT22084-091-002-136"/>
-                                        <p tid="33">When, wishing to repel hail, a vajra is spun in utter absence of forcefulness as the words are recited at low pitch and in utter secrecy, <ref cRef="F.51.b" type="folio" key="toh956" xml:id="UT22084-091-002-183"/> the nāgas will refrain from sending down hail.</p>
+                                        <p tid="33">When, wishing to repel hail, one spins a vajra in utter absence of forcefulness while reciting the words at low pitch and in utter secrecy, <ref cRef="F.51.b" type="folio" key="toh956" xml:id="UT22084-091-002-183"/> the nāgas will refrain from sending down hail.</p>
                                         <milestone unit="chunk" xml:id="UT22084-091-002-137"/>
-                                        <p tid="34">When, wishing to preserve liquor, mustard seeds are incanted seven times, the liquor ingredients will endure.</p>
+                                        <p tid="34">When, wishing to preserve liquor, one incants the ingredients and mustard seeds seven times, they will endure.</p>
                                         <milestone unit="chunk" xml:id="UT22084-091-002-138"/>
-                                        <p tid="35">When, wishing to allay an illness, water is incanted seven times and the medicines appropriate to the illness imbibed or applied, one will be freed
-                                                from illness.</p>
+                                        <p tid="35">When, wishing to allay an illness, one incants the medicines appropriate to the illness seven times mixed in water and then drinks or applies it, one will be freed from illness.</p>
                                         <milestone unit="chunk" xml:id="UT22084-091-002-139"/>
-                                        <p tid="36">When, wishing to perform any activity, the dhāraṇī<note place="end" xml:id="UT22084-091-002-140"> The Tibetan does not explicitly say “the dhāraṇī”
-                                                        here, but this has been inserted for the sake of clarity.</note> is recited seven times, one’s intention will be accomplished.</p>
+                                        <p tid="36">When, wishing to perform any rite, one recites the dhāraṇī<note place="end" xml:id="UT22084-091-002-140"> The Tibetan does not explicitly say “the dhāraṇī”
+                                                here, but this has been inserted for the sake of clarity.</note> seven times, one’s intention will be accomplished.</p>
                                         <milestone unit="chunk" xml:id="UT22084-091-002-141"/>
                                         <trailer tid="37">This completes “<title xml:lang="en">The Noble Dhāraṇī of Vajrabhairava</title>,” which repels malevolence.</trailer>
                                         <milestone unit="chunk" xml:id="UT22084-091-002-142"/>
