--- a/translations/kangyur/translations/090-008_toh564,988-the_marici_dharani.xml
+++ b/translations/kangyur/translations/090-008_toh564,988-the_marici_dharani.xml
@@ -28,7 +28,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-008-174">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -183,6 +183,9 @@
                 </change>
                 <change who="#sameer" when="2024-04-26T06:37:43.001Z" type="text-version" status="1.0.3" xml:id="UT22084-090-008-183">
                     <desc>Included in App v 3.12</desc>
+                </change>
+                <change who="#andre" when="2024-06-26T07:03:24.631Z" type="text-version" status="1.0.4" xml:id="UT22084-090-008-185">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -422,7 +425,7 @@
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-090-008-79"/>
                     <p tid="24">Thus did I hear at one time. The Blessed One was in Śrāvastī in
-                        Prince Jeta’s Grove, at Anāthapiṇḍada’s park, with a large saṅgha of 1,250
+                        Prince Jeta’s Grove, Anāthapiṇḍada’s park, with a large saṅgha of 1,250
                         monks and a great number of bodhisattva great beings. </p>
                     <milestone unit="chunk" xml:id="UT22084-090-008-80"/>
                     <p tid="25">“Monks,” said the Blessed One, “there is a certain goddess named
@@ -858,21 +861,22 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-090-008-149">
+                        <gloss xml:id="UT22084-090-008-149" type="place" mode="match">
                             <term type="translationMain">Prince Jeta’s Grove</term>
-                            <term xml:lang="Bo-Ltn" n="1">rgyal bu rgyal byed kyi tshal </term>
-                            <term xml:lang="bo" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
                             <term xml:lang="Sa-Ltn" type="attestedSource">jetavana</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal bu rgyal byed kyi tshal</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
+                            <note type="definition">
+                                <p>See “Prince Jeta’s Grove, Anāthapiṇḍada’s park.”</p>
+                            </note>
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-090-008-150">
-                            <term type="translationMain">Anāthapiṇḍada’s park</term>
-                            <term xml:lang="Bo-Ltn" n="1">mgon med zas sbyin gyi kun dga’ ra
-                                ba</term>
-                            <term xml:lang="bo" n="1">མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
-                            <term xml:lang="Sa-Ltn" type="attestedSource">anāthapiṇḍadasya
-                                ārāma</term>
+                        <gloss xml:id="UT22084-090-008-184" type="place" mode="match">
+                            <term type="translationMain">Prince Jeta’s Grove, Anāthapiṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
                     </item>
                 </list>
