--- a/translations/kangyur/translations/076-001_toh347-the_exemplary_tale_of_punyabala.xml
+++ b/translations/kangyur/translations/076-001_toh347-the_exemplary_tale_of_punyabala.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-076-001-440">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.12 <date>2024</date>
+                <edition>v 1.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -162,6 +162,9 @@
                 </change>
                 <change who="#celso" when="2024-05-15T17:36:40.762Z" type="text-version" status="1.0.12" xml:id="UT22084-076-001-477">
                     <desc>changed file name</desc>
+                </change>
+                <change who="#andre" when="2024-06-26T10:51:27.237Z" type="text-version" status="1.0.13" xml:id="UT22084-076-001-480">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -435,7 +438,7 @@
                         <ref cRef="F.1.b" type="folio" xml:id="UT22084-076-001-376"/> <ref cRef="B1" type="bampo"/> Homage to the Buddha.</p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-076-001-43"/>
-                    <p tid="37">Thus did I hear at one time. The Blessed One was staying in Śrāvastī at Prince Jeta’s Grove,
+                    <p tid="37">Thus did I hear at one time. The Blessed One was staying in Śrāvastī, in Prince Jeta’s Grove,
                         Anāthapiṇḍada’s park. At that time, the Blessed One said to the monks, “Monks, when certain
                         foolish men possess three traits at odds with the sacred Dharma, they do not practice
                         generosity, do not engage in <term>merit</term>, and do not maintain discipline after taking it on.
@@ -2986,7 +2989,7 @@
                             </note>
                         </gloss>
                     </item>
-                    <item>
+                    <!--<item>
                         <gloss type="place" xml:id="UT22084-076-001-372">
                             <term type="translationMain">Prince Jeta’s Grove</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">jetavana</term>
@@ -2995,6 +2998,14 @@
                             <note type="definition">
                                 <p>A grove that was given to the Buddha. Prince Jeta sold the so-called garden of Prince Jeta in Śrāvastī to the householder Anāthapiṇḍika, who built a monastery there and offered it to the Buddha.</p>
                             </note>
+                        </gloss>
+                    </item>-->
+                    <item>
+                        <gloss xml:id="UT22084-076-001-478" type="place" mode="match">
+                            <term type="translationMain">Prince Jeta’s Grove, Anāthapiṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
                     </item>
                     <item>
@@ -3046,6 +3057,17 @@
                                 and <foreign xml:lang="Sa-Ltn" type="term">jatakas</foreign> (some having no Pāli
                                 antecedent), which tell of past lives of the Buddha when he was a bodhisattva on the path to
                                 awakening.</p>
+                            </note>
+                        </gloss>
+                    </item>
+                    <item>
+                        <gloss xml:id="UT22084-076-001-479" type="place" mode="match">
+                            <term type="translationMain">Prince Jeta’s Grove</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">jetavana</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal bu rgyal byed kyi tshal</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
+                            <note type="definition">
+                                <p>See “Prince Jeta’s Grove, Anāthapiṇḍada’s Park.”</p>
                             </note>
                         </gloss>
                     </item>
